# density-aware-mst

./: .gitignore  CMakeLists.txt  README.md  makeitfast.bash  package.xml  quickTest.bash
config/: laserscan_filter.yaml
include/damst/: .damst.hpp.swp  damst.hpp  problem_def.hpp
launch/: laserscan_filter.launch
scripts/: viz_res.py
src/: .damst.cpp.swp  damst.cpp  problem_def.cpp
synthetic_data_sets/: aggregation.txt  t7_2.txt
test/: .test_damst1.cpp.swp  test_damst1.cpp  test_damst2.cpp  test_damst_from_file.cpp
