<?xml version="1.0"?>
<package format="2">
  <name>density_aware_mst</name>
  <version>0.0.1</version>
  <description>The density_aware_mst library package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>

</package>
